typescript/checker/tests/conformance/classes/constructorDeclarations/automaticConstructors/derivedClassWithoutExplicitConstructor3.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            357,
        ),
        hi: BytePos(
            364,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/automaticConstructors/derivedClassWithoutExplicitConstructor3.ts:21:13
   |
21 | var r = new Derived(); // error
   |             ^^^^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            391,
        ),
        hi: BytePos(
            399,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/automaticConstructors/derivedClassWithoutExplicitConstructor3.ts:22:14
   |
22 | var r2 = new Derived2(1); // error
   |              ^^^^^^^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            737,
        ),
        hi: BytePos(
            739,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/automaticConstructors/derivedClassWithoutExplicitConstructor3.ts:44:13
   |
44 | var d = new D2(); // error
   |             ^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            766,
        ),
        hi: BytePos(
            768,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/automaticConstructors/derivedClassWithoutExplicitConstructor3.ts:45:14
   |
45 | var d2 = new D2(new Date()); // error
   |              ^^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            805,
        ),
        hi: BytePos(
            807,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/constructorDeclarations/automaticConstructors/derivedClassWithoutExplicitConstructor3.ts:46:14
   |
46 | var d3 = new D2(new Date(), new Date()); // ok
   |              ^^

